# python-matrix-rmapi

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README.rst  pyproject.toml  tox.ini
.github/actions/setup-python/: action.yml
.github/workflows/: build.yml  pull_request.yml  push_to_main.yml
docker/: container-init.sh  entrypoint-dev.sh  entrypoint-test.sh
src/matrixrmapi/: __init__.py  app.py  config.py  types.py
src/matrixrmapi/api/: description.py  healthcheck.py  usercrud.py  userinfo.py
src/matrixrmapi/synapseutils/: __init__.py  startup.py  synapse_admin.py
tests/: test_app.py  test_crud.py  test_matrixrmapi.py  test_rmfpapi.py  test_synapse_admin.py
ui/: .eslintrc.cjs  package.json  pnpm-lock.yaml
ui/rm_e2e/: home.spec.ts  screenshots.spec.ts  tsconfig.json
ui/scripts/: minify-images.mjs
ui/src/: App.tsx  index.css
ui/src/components/: ElementDownload.tsx  FeatureGuide.tsx  OnboardingGuide.tsx
ui/src/lib/: detectPlatform.ts
ui/src/locales/: en.json  fi.json  sv.json
ui/src/pages/: HomePage.tsx
