[project]
name = "matrixrmapi"
version = "1.0.3+260429"
description = "Matrix service RASENMAEHER integration API service"
authors = [{ name = "logaritmi", email = "logaritmi@FIXME.com" }]
license = { text = "MIT" }
readme = "README.rst"
requires-python = ">3.10,<4.0"
dependencies = [
    "libadvian>=1.4,<2.0",
    "libpvarki>=2.2,<3.0",
    "fastapi>=0.89,<1.0",
    "pydantic>=2.0,<3.0",
    "jinja2>=3.1,<4.0",
    "uvicorn[standard]>=0.20,<1.0",
    "gunicorn>=21.0,<25.0",
    "httpx>=0.28.1,<1.0",
    "filelock>=3.12,<4.0",
]

[project.urls]
Homepage = "https://github.com/pvarki/python-rasenmaeher-matrixrmapi/"
Repository = "https://github.com/pvarki/python-rasenmaeher-matrixrmapi/"

[project.scripts]
matrixrmapi = "matrixrmapi.console:matrixrmapi_cli"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "coverage>=7.4,<8.0",
    "pytest-cov>=4.1,<5.0",
    "pylint>=3.3,<4.0",
    "black>=25.1,<26.0",
    "bandit>=1.8,<2.0",
    "mypy>=1.15,<2.0",
    "prek>=0.3,<1.0",
    "pytest-asyncio>=0.21,<1.0",
    "bump2version>=1.0,<2.0",
    "detect-secrets>=1.5,<2.0",
]

[tool.uv.sources]
libpvarki = { index = "nexuslocal" }

[[tool.uv.index]]
name = "nexuslocal"
url = "https://nexus.dev.pvarki.fi/repository/pypilocal/simple"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matrixrmapi"]


[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.mypy]
strict=true

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=matrixrmapi --cov-fail-under=55 --cov-branch"
asyncio_mode="strict"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-parents = 10

[tool.pylint.messages_control]
disable=["fixme", "W1202", "C0209"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true

[tool.coverage.run]
omit = ["tests/*"]
branch = true
